infra/cerbos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerbos
  namespace: cerbos
spec:
  type: ClusterIP
  selector:
    app: cerbos
  ports:
    - name: http
      port: 3592
      protocol: TCP
    - name: grpc
      port: 3593
      protocol: TCP
