infra/cerbos/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cerbos
  namespace: cerbos
spec:
  endpointSelector:
    matchLabels:
      app: cerbos
  ingress:
    - fromEntities: [host, remote-node]
      toPorts:
        - ports:
            - { port: "3592", protocol: TCP }
            - { port: "3593", protocol: TCP }
  egress:
    - toEntities: [host]
      toPorts:
        - ports: [{ port: "53", protocol: ANY }]
          rules:
            dns: [{ matchPattern: "*" }]
    - toFQDNs:
        - matchName: "github.com"
      toPorts:
        - ports: [{ port: "22", protocol: TCP }]
